# cmake_externalproject_example

./: 001_disable_zlib.patch  002_disable_tests.patch  CMakeLists.txt  README.md
src/: main.cpp
